docker: use multistage CentOS-7 based image with java-11